Dosyalar guncellendi ve hatalar giderildi

--- a/public/index.html
+++ b/public/index.html
@@ -44,5 +44,22 @@
     </div>
 
     <script src="script.js"></script>
+    <div id="quote-container">
+        <p id="daily-quote">"Başlamak için mükemmel olmak zorunda değilsin..."</p>
+    </div>
+
+    <div class="credits-footer">
+        <div class="scrolling-text">
+            <span>💻 Geliştirici: <strong>Maide</strong></span>
+            <span>🎨 UI/UX Tasarım: <strong>Efe</strong></span>
+            <span>🚀 Proje Yöneticisi: <strong>Kenan</strong></span>
+            <span>⚡ Teknoloji: <strong>Kagan</strong></span>
+            <span>🎓 Ders: <strong>Web Tasarım</strong></span>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
 </body>
 </html>
