--- a/public/index.html
+++ b/public/index.html
@@ -232,6 +232,19 @@
             </div>
         </div>
     </div>
+    <div class="glass-panel" style="margin-top: 20px;">
+    <h3>Canlı Çalışma Odaları</h3>
+    
+    <div id="room-list" style="max-height: 150px; overflow-y: auto; margin-bottom: 10px;">
+        <p>Sunucu bekleniyor...</p>
+    </div>
+
+    <div style="display: flex; gap: 5px;">
+        <input type="text" id="new-room-name" placeholder="Oda Adı" style="flex:1; padding: 5px;">
+        <input type="password" id="new-room-pass" placeholder="Şifre (Ops)" style="width: 80px; padding: 5px;">
+        <button id="btn-create-room" style="cursor: pointer; padding: 5px 10px;">Oluştur</button>
+    </div>
+</div>
 
     <script src="script.js"></script>
 </body>
