odaların çalışmasının düzenlenmesi

--- a/public/index.html
+++ b/public/index.html
@@ -112,9 +112,11 @@
                         <input type="password" id="new-room-pass" placeholder="Şifre (Opsiyonel)" style="width: 100%; margin-bottom: 5px; padding: 8px; border-radius: 5px; border: none;">
                         <button class="btn-primary" id="btn-create-room" style="width: 100%;">OLUŞTUR</button>
                     </div>
+                    
                     <h3 class="sidebar-title" style="margin-top:20px;">Aktif Odalar</h3>
+                    
                     <div id="room-list" class="scroll-box">
-                        <p style="opacity:0.6; padding:10px; font-size:0.9rem;">Sunucu bağlantısı bekleniyor...</p>
+                        <p style="opacity:0.6; padding:10px; font-size:0.9rem;">Yükleniyor...</p>
                     </div>
                 </div>
             </div>
